--- a/Li_DL/HW_4/hw4_Glove.ipynb
+++ b/Li_DL/HW_4/hw4_Glove.ipynb
@@ -263,123 +263,44 @@
     "\n",
     "    data_pro = data_processing(embed_dim = embed_dim, seq_len = max_seq_len)\n",
     "    embedding = data_pro.build_embedding_matrix('glove.6B.100d.txt')\n",
-    "    print('Embedding matrix build successfully.')\n",
+    "    print(embedding)\n",
+    "    # print('Embedding matrix build successfully.')\n",
     "\n",
-    "    train_X, val_X, train_y, val_y = train_test_split(train_label_data, train_label, train_size = 0.8)\n",
-    "    train_set = TextDataset(data_pro, train_X, train_y)\n",
-    "    valid_set = TextDataset(data_pro, val_X, val_y)\n",
-    "    train_loader = DataLoader(train_set, batch_size = batch_size, shuffle = True)\n",
-    "    valid_loader = DataLoader(valid_set, batch_size = batch_size, shuffle = True)\n",
-    "    print('Data Loader build successfully.')\n",
+    "    # train_X, val_X, train_y, val_y = train_test_split(train_label_data, train_label, train_size = 0.8)\n",
+    "    # train_set = TextDataset(data_pro, train_X, train_y)\n",
+    "    # valid_set = TextDataset(data_pro, val_X, val_y)\n",
+    "    # train_loader = DataLoader(train_set, batch_size = batch_size, shuffle = True)\n",
+    "    # valid_loader = DataLoader(valid_set, batch_size = batch_size, shuffle = True)\n",
+    "    # print('Data Loader build successfully.')\n",
     "\n",
-    "    model = RNN(embedding).to(device)\n",
-    "    print('RNN model initialize successfully.')\n",
+    "    # model = RNN(embedding).to(device)\n",
+    "    # print('RNN model initialize successfully.')\n",
     "    \n",
-    "    train(model, train_loader, valid_loader, batch_size, epoch_num, lr, device)"
+    "    # train(model, train_loader, valid_loader, batch_size, epoch_num, lr, device)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
-     "text": [
-      "Data load successfully.\n",
-      "Super parameters set successfully, device is cpu.\n",
-      "Embedding matrix build successfully.\n"
-     ]
+     "name": "stdout",
+     "text": "Data load successfully.\nSuper parameters set successfully, device is cpu.\n"
     },
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/Juyi/anaconda3/envs/deeplearing/lib/python3.6/site-packages/sklearn/model_selection/_split.py:2179: FutureWarning: From version 0.21, test_size will always complement train_size unless both are specified.\n",
-      "  FutureWarning)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Data Loader build successfully.\n",
-      "RNN model initialize successfully.\n",
-      "Begin to train.\n",
-      "Epoch[01|50] | Train loss is : 0.02136 | Train acc is : 0.577 | Valid loss is : 0.66359 | Valid acc is : 0.616 \n",
-      "***** The best accuracy in validation set is 0.616\n",
-      "Epoch[02|50] | Train loss is : 0.01980 | Train acc is : 0.652 | Valid loss is : 0.61350 | Valid acc is : 0.679 \n",
-      "***** The best accuracy in validation set is 0.679\n",
-      "Epoch[03|50] | Train loss is : 0.01882 | Train acc is : 0.690 | Valid loss is : 0.59438 | Valid acc is : 0.699 \n",
-      "***** The best accuracy in validation set is 0.699\n",
-      "Epoch[04|50] | Train loss is : 0.01846 | Train acc is : 0.704 | Valid loss is : 0.58464 | Valid acc is : 0.711 \n",
-      "***** The best accuracy in validation set is 0.711\n",
-      "Epoch[05|50] | Train loss is : 0.01824 | Train acc is : 0.715 | Valid loss is : 0.58069 | Valid acc is : 0.716 \n",
-      "***** The best accuracy in validation set is 0.716\n",
-      "Epoch[06|50] | Train loss is : 0.01807 | Train acc is : 0.721 | Valid loss is : 0.57563 | Valid acc is : 0.722 \n",
-      "***** The best accuracy in validation set is 0.722\n",
-      "Epoch[07|50] | Train loss is : 0.01791 | Train acc is : 0.724 | Valid loss is : 0.57065 | Valid acc is : 0.726 \n",
-      "***** The best accuracy in validation set is 0.726\n",
-      "Epoch[08|50] | Train loss is : 0.01775 | Train acc is : 0.729 | Valid loss is : 0.56733 | Valid acc is : 0.729 \n",
-      "***** The best accuracy in validation set is 0.729\n",
-      "Epoch[09|50] | Train loss is : 0.01760 | Train acc is : 0.734 | Valid loss is : 0.56329 | Valid acc is : 0.733 \n",
-      "***** The best accuracy in validation set is 0.733\n",
-      "Epoch[10|50] | Train loss is : 0.01749 | Train acc is : 0.738 | Valid loss is : 0.55999 | Valid acc is : 0.736 \n",
-      "***** The best accuracy in validation set is 0.736\n",
-      "Epoch[11|50] | Train loss is : 0.01739 | Train acc is : 0.742 | Valid loss is : 0.55706 | Valid acc is : 0.740 \n",
-      "***** The best accuracy in validation set is 0.740\n",
-      "Epoch[12|50] | Train loss is : 0.01731 | Train acc is : 0.744 | Valid loss is : 0.55324 | Valid acc is : 0.745 \n",
-      "***** The best accuracy in validation set is 0.745\n",
-      "Epoch[13|50] | Train loss is : 0.01720 | Train acc is : 0.749 | Valid loss is : 0.55108 | Valid acc is : 0.747 \n",
-      "***** The best accuracy in validation set is 0.747\n",
-      "Epoch[14|50] | Train loss is : 0.01712 | Train acc is : 0.752 | Valid loss is : 0.54871 | Valid acc is : 0.748 \n",
-      "***** The best accuracy in validation set is 0.748\n",
-      "Epoch[15|50] | Train loss is : 0.01703 | Train acc is : 0.755 | Valid loss is : 0.54614 | Valid acc is : 0.750 \n",
-      "***** The best accuracy in validation set is 0.750\n",
-      "Epoch[16|50] | Train loss is : 0.01694 | Train acc is : 0.758 | Valid loss is : 0.54344 | Valid acc is : 0.755 \n",
-      "***** The best accuracy in validation set is 0.755\n",
-      "Epoch[17|50] | Train loss is : 0.01686 | Train acc is : 0.761 | Valid loss is : 0.54146 | Valid acc is : 0.756 \n",
-      "***** The best accuracy in validation set is 0.756\n",
-      "Epoch[18|50] | Train loss is : 0.01679 | Train acc is : 0.764 | Valid loss is : 0.53999 | Valid acc is : 0.757 \n",
-      "***** The best accuracy in validation set is 0.757\n",
-      "Epoch[19|50] | Train loss is : 0.01675 | Train acc is : 0.765 | Valid loss is : 0.53845 | Valid acc is : 0.760 \n",
-      "***** The best accuracy in validation set is 0.760\n",
-      "Epoch[20|50] | Train loss is : 0.01669 | Train acc is : 0.767 | Valid loss is : 0.53613 | Valid acc is : 0.764 \n",
-      "***** The best accuracy in validation set is 0.764\n",
-      "Epoch[21|50] | Train loss is : 0.01662 | Train acc is : 0.770 | Valid loss is : 0.53515 | Valid acc is : 0.766 \n",
-      "***** The best accuracy in validation set is 0.766\n",
-      "Epoch[22|50] | Train loss is : 0.01654 | Train acc is : 0.772 | Valid loss is : 0.53241 | Valid acc is : 0.767 \n",
-      "***** The best accuracy in validation set is 0.767\n",
-      "Epoch[23|50] | Train loss is : 0.01647 | Train acc is : 0.775 | Valid loss is : 0.53175 | Valid acc is : 0.767 \n",
-      "***** The best accuracy in validation set is 0.767\n",
-      "Epoch[24|50] | Train loss is : 0.01645 | Train acc is : 0.775 | Valid loss is : 0.53005 | Valid acc is : 0.770 \n",
-      "***** The best accuracy in validation set is 0.770\n",
-      "Epoch[25|50] | Train loss is : 0.01640 | Train acc is : 0.777 | Valid loss is : 0.52922 | Valid acc is : 0.772 \n",
-      "***** The best accuracy in validation set is 0.772\n",
-      "Epoch[26|50] | Train loss is : 0.01634 | Train acc is : 0.779 | Valid loss is : 0.52751 | Valid acc is : 0.773 \n",
-      "***** The best accuracy in validation set is 0.773\n",
-      "Epoch[27|50] | Train loss is : 0.01629 | Train acc is : 0.780 | Valid loss is : 0.52623 | Valid acc is : 0.774 \n",
-      "***** The best accuracy in validation set is 0.774\n",
-      "Epoch[28|50] | Train loss is : 0.01626 | Train acc is : 0.782 | Valid loss is : 0.52576 | Valid acc is : 0.774 \n",
-      "***** The best accuracy in validation set is 0.774\n",
-      "Epoch[29|50] | Train loss is : 0.01621 | Train acc is : 0.783 | Valid loss is : 0.52513 | Valid acc is : 0.775 \n",
-      "***** The best accuracy in validation set is 0.775\n",
-      "Epoch[30|50] | Train loss is : 0.01619 | Train acc is : 0.785 | Valid loss is : 0.52299 | Valid acc is : 0.777 \n",
-      "***** The best accuracy in validation set is 0.777\n",
-      "Epoch[31|50] | Train loss is : 0.01615 | Train acc is : 0.786 | Valid loss is : 0.52286 | Valid acc is : 0.778 \n",
-      "***** The best accuracy in validation set is 0.778\n",
-      "Epoch[32|50] | Train loss is : 0.01611 | Train acc is : 0.787 | Valid loss is : 0.52213 | Valid acc is : 0.779 \n",
-      "***** The best accuracy in validation set is 0.779\n",
-      "Epoch[33|50] | Train loss is : 0.01609 | Train acc is : 0.788 | Valid loss is : 0.52091 | Valid acc is : 0.781 \n",
-      "***** The best accuracy in validation set is 0.781\n",
-      "Epoch[34|50] | Train loss is : 0.01604 | Train acc is : 0.789 | Valid loss is : 0.52151 | Valid acc is : 0.781 \n",
-      "Epoch[35|50] | Train loss is : 0.01601 | Train acc is : 0.790 | Valid loss is : 0.52001 | Valid acc is : 0.781 \n",
-      "***** The best accuracy in validation set is 0.781\n",
-      "Epoch[36|50] | Train loss is : 0.01598 | Train acc is : 0.791 | Valid loss is : 0.51863 | Valid acc is : 0.782 \n",
-      "***** The best accuracy in validation set is 0.782\n",
-      "Epoch[37|50] | Train loss is : 0.01595 | Train acc is : 0.793 | Valid loss is : 0.51887 | Valid acc is : 0.784 \n",
-      "***** The best accuracy in validation set is 0.784\n"
+     "output_type": "error",
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: 'glove.6B.100d.txt'",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-9-1f6c09e3b003>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mbiu\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-8-eb820a4fe7d4>\u001b[0m in \u001b[0;36mbiu\u001b[0;34m()\u001b[0m\n\u001b[1;32m     21\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     22\u001b[0m     \u001b[0mdata_pro\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdata_processing\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0membed_dim\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0membed_dim\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mseq_len\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmax_seq_len\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 23\u001b[0;31m     \u001b[0membedding\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdata_pro\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbuild_embedding_matrix\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'glove.6B.100d.txt'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     24\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0membedding\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     25\u001b[0m     \u001b[0;31m# print('Embedding matrix build successfully.')\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-3-7f255edf0872>\u001b[0m in \u001b[0;36mbuild_embedding_matrix\u001b[0;34m(self, path)\u001b[0m\n\u001b[1;32m     29\u001b[0m     \u001b[0;31m# bulid the embedding matrix for RNN\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     30\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mbuild_embedding_matrix\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpath\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 31\u001b[0;31m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload_embedding_vocab\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     32\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0mword\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mword2vec\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     33\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mword2idx\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mword\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0midx\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-3-7f255edf0872>\u001b[0m in \u001b[0;36mload_embedding_vocab\u001b[0;34m(self, path)\u001b[0m\n\u001b[1;32m     11\u001b[0m     \u001b[0;31m# load the pre-trained Glove embedding vocab\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mload_embedding_vocab\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpath\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 13\u001b[0;31m         \u001b[0;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'r'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mencoding\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'utf-8'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0merrors\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'ignore'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     14\u001b[0m             \u001b[0;32mfor\u001b[0m \u001b[0mline\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m                 \u001b[0mtokens\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mline\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msplit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'glove.6B.100d.txt'"
      ]
     }
    ],
@@ -393,13 +314,6 @@
    "source": [
     "## "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -418,7 +332,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.6.9-final"
   }
  },
  "nbformat": 4,
